[gd_scene load_steps=6 format=3 uid="uid://dctqxoyhgsjqp"]

[ext_resource type="PackedScene" uid="uid://c3gl0aagqxsg8" path="res://entities/blocks/bonus_block.tscn" id="1_1af7m"]
[ext_resource type="Texture2D" uid="uid://babakghj6swox" path="res://assets/ball.png" id="2_77f7k"]
[ext_resource type="Script" uid="uid://dwk3dxxo5rwcd" path="res://entities/blocks/ball_bonus_block.gd" id="2_hwwae"]
[ext_resource type="PackedScene" uid="uid://cwca3nqjljvq5" path="res://entities/ball_highlight.tscn" id="3_hwwae"]
[ext_resource type="Material" uid="uid://kbimjfdgmplr" path="res://resources/burst_particles.tres" id="5_hwwae"]

[node name="BallBonusBlock" instance=ExtResource("1_1af7m")]
script = ExtResource("2_hwwae")

[node name="BallSprite" type="Sprite2D" parent="." index="2"]
texture = ExtResource("2_77f7k")

[node name="BallHighlight" parent="." index="3" instance=ExtResource("3_hwwae")]

[node name="GPUParticles2D" type="GPUParticles2D" parent="." index="5"]
emitting = false
amount = 64
texture = ExtResource("2_77f7k")
one_shot = true
explosiveness = 1.0
randomness = 0.07
process_material = ExtResource("5_hwwae")
